# AVLab

./: README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts  音频.md
app/src/androidTest/java/com/lq/avlab/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/lq/avlab/: AudioRecordRepository.kt  FileUtil.kt  HandlerTest.kt  RecordPipeline.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/lq/avlab/: ExampleUnitTest.kt
audio/: build.gradle.kts
audio/src/androidTest/java/com/lq/audio/: ExampleInstrumentedTest.kt
audio/src/cpp/: CMakeLists.txt  audio_bridge.cpp
audio/src/cpp/buffer/: audio_engine_context.h  audio_estimator.cpp  audio_estimator.h  audio_ring_buffer.cpp  audio_ring_buffer.h
audio/src/cpp/dsp/: audio_handle.cpp  audio_handle.h
audio/src/main/java/com/lq/audio/: AacCoder.kt  AudioConfig.kt  AudioJniBridge.kt  AudioPacket.kt  AudioPlayPipeline.kt  AudioRecordConfig.kt  AudioRecordFactory.kt  AudioRecordManager.kt  AudioRecordPipeline.kt  AudioRecordType.kt  AudioTrackConfig.kt  AudioTrackManager.kt  ByteArrayPool.kt  LockFreeByteArrayPool.kt  MediaClock.kt  NewRingBuffer.kt  PlayState.kt  RecordState.kt  (+1 more)
common/: build.gradle.kts
gradle/: gradle-daemon-jvm.properties  libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
video/: build.gradle.kts
video/src/main/: AndroidManifest.xml
webrtc/: build.gradle.kts  signaling-server.js
webrtc/src/main/: AndroidManifest.xml
webrtc/src/main/res/layout/: activity_select.xml  activity_web_rtc.xml
(+124 files in other folders)
